@@ -761,8 +761,8 @@
       <points>0.5</points>
       <levels>True</levels>
       <limit>1</limit>
-      <source>SG</source>
-      <page>170</page>
+      <source>SGE</source>
+      <page>4</page>
       <adeptway>0.25</adeptway>
       <!-- Awaiting activation by errata
 	  <adeptwayrequires>
@@ -944,8 +944,8 @@
       <points>0.5</points>
       <levels>False</levels>
       <limit>1</limit>
-      <source>SG</source>
-      <page>1</page>
+      <source>SGE</source>
+      <page>4</page>
       <action>Free</action>
       <adeptway>0.25</adeptway>
     </power>
@@ -989,8 +989,8 @@
       <points>1</points>
       <levels>False</levels>
       <limit>1</limit>
-      <source>SG</source>
-      <page>1</page>
+      <source>SGE</source>
+      <page>4</page>
       <adeptway>0.5</adeptway>
     </power>
     <power>
